[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Left_Panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Game_Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Minimap.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Selection_Box.gd" type="Script" id=4]
[ext_resource path="res://World/Camera.gd" type="Script" id=5]
[ext_resource path="res://UI/Right_Panel.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 448, 640 )

[node name="Camera_Controller" type="KinematicBody2D"]
light_mask = 0
collision_layer = 32
collision_mask = 32
collision/safe_margin = 0.1
script = ExtResource( 5 )

[node name="Camera_Collider" type="CollisionShape2D" parent="."]
position = Vector2( 1016, 648 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Selection_Box" type="Control" parent="."]
margin_left = 5.0
margin_top = 8.0
margin_right = 45.0
margin_bottom = 48.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 5, 8 )
scale = Vector2( 0.4, 0.4 )
z_as_relative = false
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 100.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Left_Panel" parent="GUI" instance=ExtResource( 1 )]

[node name="Right_Panel" parent="GUI" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.0
margin_right = 0.0

[node name="Minimap" parent="GUI" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -290.0
margin_top = -288.0
margin_right = 110.0
margin_bottom = 112.0

[node name="Game_Menu" parent="GUI" instance=ExtResource( 2 )]
margin_left = -70.0801
margin_top = -88.0
margin_right = 57.9199
margin_bottom = 168.0

[node name="NinePatchRect" parent="GUI/Game_Menu" index="0"]
margin_right = 109.0
margin_bottom = 256.0

[node name="Menu" parent="GUI/Game_Menu/VBoxContainer" index="0"]
margin_right = 88.0

[node name="New_Game" parent="GUI/Game_Menu/VBoxContainer" index="1"]
margin_right = 88.0

[node name="Save_Game" parent="GUI/Game_Menu/VBoxContainer" index="2"]
margin_right = 88.0

[node name="Load_Game" parent="GUI/Game_Menu/VBoxContainer" index="3"]
margin_right = 88.0

[node name="Options" parent="GUI/Game_Menu/VBoxContainer" index="4"]
margin_right = 88.0

[node name="Back" parent="GUI/Game_Menu/VBoxContainer" index="5"]
margin_right = 88.0
[connection signal="pressed" from="GUI/Game_Menu/VBoxContainer/Back" to="." method="_on_Back_pressed"]

[editable path="GUI/Right_Panel"]

[editable path="GUI/Game_Menu"]
